--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -101,7 +101,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter title here: " textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NOj-hc-1wM">
-                                <rect key="frame" x="20" y="108" width="374" height="34"/>
+                                <rect key="frame" x="20" y="151" width="374" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <connections>
@@ -110,22 +110,33 @@
                                 </connections>
                             </textField>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="0z8-GL-dao">
-                                <rect key="frame" x="20" y="162" width="374" height="680"/>
+                                <rect key="frame" x="20" y="201" width="374" height="645"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="QCs-BX-mWV">
+                                <rect key="frame" x="20" y="104" width="374" height="32"/>
+                                <segments>
+                                    <segment title="😔"/>
+                                    <segment title="😐"/>
+                                    <segment title="☺️"/>
+                                </segments>
+                            </segmentedControl>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="NOj-hc-1wM" firstAttribute="top" secondItem="U4U-dg-pwA" secondAttribute="top" constant="20" id="50n-gB-dX6"/>
-                            <constraint firstItem="U4U-dg-pwA" firstAttribute="bottom" secondItem="0z8-GL-dao" secondAttribute="bottom" constant="20" id="Czr-Wi-A58"/>
-                            <constraint firstItem="0z8-GL-dao" firstAttribute="leading" secondItem="U4U-dg-pwA" secondAttribute="leading" constant="20" id="Ebg-jE-yqR"/>
-                            <constraint firstItem="U4U-dg-pwA" firstAttribute="trailing" secondItem="NOj-hc-1wM" secondAttribute="trailing" constant="20" id="G1t-oI-YaG"/>
-                            <constraint firstItem="U4U-dg-pwA" firstAttribute="trailing" secondItem="0z8-GL-dao" secondAttribute="trailing" constant="20" id="Gjo-Ac-QrR"/>
-                            <constraint firstItem="0z8-GL-dao" firstAttribute="top" secondItem="NOj-hc-1wM" secondAttribute="bottom" constant="20" id="i4U-2e-M7I"/>
-                            <constraint firstItem="NOj-hc-1wM" firstAttribute="leading" secondItem="U4U-dg-pwA" secondAttribute="leading" constant="20" id="vkI-mV-co4"/>
+                            <constraint firstItem="U4U-dg-pwA" firstAttribute="trailing" secondItem="0z8-GL-dao" secondAttribute="trailing" constant="20" id="0PV-5c-I5X"/>
+                            <constraint firstItem="NOj-hc-1wM" firstAttribute="leading" secondItem="U4U-dg-pwA" secondAttribute="leading" constant="20" id="0d9-xb-KEp"/>
+                            <constraint firstItem="U4U-dg-pwA" firstAttribute="bottom" secondItem="0z8-GL-dao" secondAttribute="bottom" constant="16" id="1nZ-hu-UNY"/>
+                            <constraint firstItem="0z8-GL-dao" firstAttribute="leading" secondItem="U4U-dg-pwA" secondAttribute="leading" constant="20" id="57k-wI-fS5"/>
+                            <constraint firstItem="QCs-BX-mWV" firstAttribute="top" secondItem="U4U-dg-pwA" secondAttribute="top" constant="16" id="F7Q-01-22F"/>
+                            <constraint firstItem="0z8-GL-dao" firstAttribute="top" secondItem="NOj-hc-1wM" secondAttribute="bottom" constant="16" id="HEN-aC-v0w"/>
+                            <constraint firstItem="U4U-dg-pwA" firstAttribute="trailing" secondItem="QCs-BX-mWV" secondAttribute="trailing" constant="20" id="Kr3-x9-Lqp"/>
+                            <constraint firstItem="QCs-BX-mWV" firstAttribute="leading" secondItem="U4U-dg-pwA" secondAttribute="leading" constant="20" id="g8W-MF-xpW"/>
+                            <constraint firstItem="NOj-hc-1wM" firstAttribute="top" secondItem="QCs-BX-mWV" secondAttribute="bottom" constant="16" id="moz-xV-ioU"/>
+                            <constraint firstItem="U4U-dg-pwA" firstAttribute="trailing" secondItem="NOj-hc-1wM" secondAttribute="trailing" constant="20" id="ytV-Sx-c2Y"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="U4U-dg-pwA"/>
                     </view>
@@ -137,6 +148,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="moodSegmentedControl" destination="QCs-BX-mWV" id="wqS-A9-6X4"/>
                         <outlet property="nameTextField" destination="NOj-hc-1wM" id="CXs-lY-fYn"/>
                         <outlet property="notesTextView" destination="0z8-GL-dao" id="cQO-3h-elo"/>
                         <outlet property="saveButton" destination="FK4-7L-ANr" id="JP4-uh-htY"/>
@@ -144,7 +156,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sd3-5A-Y96" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="968" y="149"/>
+            <point key="canvasLocation" x="966.66666666666674" y="148.66071428571428"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="wAL-QP-DG2">
