--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -137,6 +137,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="segmentedControl" destination="oVr-xD-ET0" id="Skh-17-JXk"/>
                         <outlet property="textView" destination="W3c-VN-DCP" id="ggE-Ch-yzI"/>
                         <outlet property="titleTextField" destination="mFe-nc-he1" id="RGr-Bo-bA9"/>
                     </connections>
