Implemented functionality to fetch entries from the server. MVP is complete.

--- a/Journal (Core Data)/Journal (Core Data)/Base.lproj/Main.storyboard
+++ b/Journal (Core Data)/Journal (Core Data)/Base.lproj/Main.storyboard
@@ -75,6 +75,12 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="9tj-vf-8B6">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <connections>
+                            <action selector="refresh:" destination="jTv-Ve-wtU" eventType="valueChanged" id="2ai-JA-Qtc"/>
+                        </connections>
+                    </refreshControl>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8vB-EF-t3t" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
