finished MVP working as expected

--- a/Journal/Journal/Resources/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Resources/Base.lproj/Main.storyboard
@@ -75,6 +75,12 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="9EQ-pp-iPi">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <connections>
+                            <action selector="pullToRefreshTableview:" destination="tzC-dW-1qh" eventType="valueChanged" id="G31-lP-B31"/>
+                        </connections>
+                    </refreshControl>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4IZ-5o-w9l" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
