--- a/My Journal - Core Data/My Journal - Core Data/Base.lproj/Main.storyboard
+++ b/My Journal - Core Data/My Journal - Core Data/Base.lproj/Main.storyboard
@@ -11,19 +11,56 @@
         <scene sceneID="EqZ-XE-emE">
             <objects>
                 <tableViewController id="FZQ-19-bxQ" customClass="EntriesTableViewController" customModule="My_Journal___Core_Data" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="mCO-Rk-BB4">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="70" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="mCO-Rk-BB4">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="MGD-jY-IGX">
-                                <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="MGD-jY-IGX" customClass="EntryTableViewCell" customModule="My_Journal___Core_Data" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="70"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="MGD-jY-IGX" id="VnN-AX-1zt">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="70"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="BrS-82-Z3m">
+                                            <rect key="frame" x="20" y="4" width="374" height="24"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Creative title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f0b-n7-eTd">
+                                                    <rect key="frame" x="0.0" y="0.0" width="182" height="24"/>
+                                                    <color key="backgroundColor" red="0.55634254220000001" green="0.97934550050000002" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4/20/2020" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Swd-bB-hgW">
+                                                    <rect key="frame" x="192" y="0.0" width="182" height="24"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </stackView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My name is Nick " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Zt-8U-bwl">
+                                            <rect key="frame" x="20" y="49.5" width="374" height="20.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="BrS-82-Z3m" secondAttribute="trailing" constant="20" id="5LJ-fJ-J0a"/>
+                                        <constraint firstAttribute="trailing" secondItem="2Zt-8U-bwl" secondAttribute="trailing" constant="20" id="9NH-sG-wO3"/>
+                                        <constraint firstItem="BrS-82-Z3m" firstAttribute="leading" secondItem="VnN-AX-1zt" secondAttribute="leading" constant="20" id="Vy6-1L-TCv"/>
+                                        <constraint firstAttribute="bottom" secondItem="2Zt-8U-bwl" secondAttribute="bottom" id="Xlx-f0-5Ak"/>
+                                        <constraint firstItem="2Zt-8U-bwl" firstAttribute="leading" secondItem="VnN-AX-1zt" secondAttribute="leading" constant="20" id="ZVl-XU-nGx"/>
+                                        <constraint firstItem="BrS-82-Z3m" firstAttribute="top" secondItem="VnN-AX-1zt" secondAttribute="top" constant="4" id="zf0-BN-zcF"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="entryBodyLabel" destination="2Zt-8U-bwl" id="8w2-UX-au1"/>
+                                    <outlet property="entryTitleLabel" destination="f0b-n7-eTd" id="Thu-gh-drc"/>
+                                    <outlet property="timeStampLabel" destination="Swd-bB-hgW" id="YRZ-31-9AM"/>
                                     <segue destination="GCL-FU-jDO" kind="show" identifier="CellEntrySegue" id="8Fi-aH-mmz"/>
                                 </connections>
                             </tableViewCell>
@@ -66,8 +103,8 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="HaJ-pF-9rg" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="uf4-q6-QIt">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="uf4-q6-QIt">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
